# jot-down

./: package-lock.json  package.json
app/: .env.example  index.html  package.json
app/src/: App.tsx  Routes.tsx  config.ts  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: ConfirmationForm.tsx  Navigation.tsx  SignInForm.tsx  SignUpForm.tsx
app/src/pages/: Home.tsx  SignIn.tsx  SignUp.tsx
app/src/state/: authSlice.ts  authState.ts  store.ts
app/src/types/: LinkType.ts
backend/: package.json  schema.gql
backend/prisma/: generated.d.ts  schema.prisma
backend/prisma/migrations/20220224140332_init/: migration.sql
backend/src/: builder.ts  lambda.ts  schema.ts
backend/src/resolvers/: notesResolver.ts  resolver.ts  usersResolver.ts
backend/stacks/: ApiStack.ts  AuthStack.ts  StorageStack.ts  index.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
