[package]
name = "app"
version = "0.1.0"
description = "Application to quickly take notes"
authors = ["Rohith Gilla"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"
# build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all", "system-tray"] }
tauri-plugin-positioner = {version = "1.0", features = ["system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
